# insurance_architecture

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  filler.py  main.py
backend/app/api/: insurance.py
backend/app/dao/: __init__.py  base.py  custom_types.py  dao.py  session_maker.py
backend/app/exceptions/: __init__.py
backend/app/loggers/: auth_logger.py  base_logger.py  document_logger.py
backend/app/middleware/: auth_logging.py
backend/app/misc/: auth_depends.py
backend/app/schemas/: auth.py  chat.py  file.py  insurance.py  request_log.py  user.py
backend/app/services/: auth.py  insurance.py  llm.py
backend/app/templates/: README.md  insurance_blank.docx
backend/db/: alembic.ini  database.py  models.py
backend/db/migrations/versions/: 305bd03c6930_init.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css
